[package]
name = "fuels-abigen-macro"
version = "0.3.1"
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2018"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/FuelLabs/fuels-rs"
description = "Fuel Rust SDK marcros to generate types from ABI."

[lib]
proc-macro = true

[dependencies]
fuel-tx = "0.5"
fuels-core = { version = "0.3.1", path = "../fuels-core" }
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
syn = "1.0.12"
# syntex_errors = "0.59.1"
load_file = "1.0.1"

[dev-dependencies]
fuel-core = { version = "0.3", default-features = false }
fuel-gql-client = { version = "0.3", default-features = false }
fuels-contract = { version = "0.3.1", path = "../fuels-contract" }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
sha2 = "0.9.5"
tokio = "1.15.0"